Resolve "Stretch Goal : Adding map view to current dashboard ride"

--- a/ghi/src/itinerary.css
+++ b/ghi/src/itinerary.css
@@ -1,4 +1,5 @@
 /* div.leaflet-top.leaflet-right{ display: none !important; width: 0px  !important; height: 0px  !important; } */
 div.leaflet-routing-alt  > table{ display: none !important; width: 0px  !important; height: 0px  !important; }
 div.leaflet-routing-alt  > h2{ display: none !important; width: 0px  !important; height: 0px  !important; }
+div.leaflet-routing-alt-minimized{ display: none !important; width: 0px  !important; height: 0px  !important; }
 div.leaflet-routing-container {background-color: white;}
